--- a/application.properties
+++ b/application.properties
@@ -2,5 +2,6 @@
 #Mon Jul 01 16:40:05 EST 2013
 app.grails.version=1.3.7
 app.name=phantomjs-jasmine
+app.version=0.0.1
 plugins.hibernate=1.3.7
 plugins.tomcat=1.3.7
