--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,6 @@
 #Grails Metadata file
-#Thu Apr 09 08:51:01 EST 2015
+#Thu Apr 09 14:13:06 EST 2015
 app.grails.version=2.4.4
 app.name=phantomjs-jasmine
+app.servlet.version=2.5
+app.version=0.1
